--- a/project.css
+++ b/project.css
@@ -45,3 +45,18 @@ hr{
     font-size: 12px;
     color: gray;
 }
+#portfolio{
+    margin-left: 20px;
+    font-size: 18pxs;
+}
+#github{
+    margin-left: 20px;
+}
+.task .title{
+    text-align: end;
+    margin-right: 20px;
+    color: gray;
+    font-size: 20px;
+    font-style: italic;
+    margin-top: 100px;
+}
